apps/gatekeeper-dev/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-dev

---
apiVersion: v1
kind: Namespace
metadata:
  name: service-gatekeeper-echo-dev
