apps/gatekeeper-dev/base/gatekeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gatekeeper
  namespace: gatekeeper-dev
spec:
  ports:
    - port: 80
      targetPort: 8080 
  selector:
    app: service-gatekeeper
